src/parsers/parser/NdfGrammarParser.py
# Generated from NdfGrammar.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class NdfGrammarParser ( Parser ):

    grammarFileName = "NdfGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'('", "')'", "':'", "'-'", "'+'", 
                     "'*'", "'<'", "','", "'>'", "'['", "']'", "'$'", "'~'", 
                     "'/'", "'|'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "K_TRUE", "K_FALSE", "K_MAP", "K_IS", 
                      "K_DIV", "K_NIL", "K_BOOL", "K_STRING", "K_INT", "K_FLOAT", 
                      "K_PAIR", "K_LIST", "K_EXPORT", "K_PRIVATE", "K_UNNAMED", 
                      "K_RGBA", "STRING", "INT", "FLOAT", "HEXNUMBER", "GUID", 
                      "ID", "WS", "COMMENT" ]

    RULE_ndf_file = 0
    RULE_assignment = 1
    RULE_private_prefix = 2
    RULE_export_prefix = 3
    RULE_r_value = 4
    RULE_object_type = 5
    RULE_block = 6
    RULE_normal_assignment = 7
    RULE_member_assignment = 8
    RULE_unnamed_assignment = 9
    RULE_object = 10
    RULE_id = 11
    RULE_arithmetic = 12
    RULE_atom = 13
    RULE_op = 14
    RULE_concatination = 15
    RULE_builtin_type_label = 16
    RULE_pair_label = 17
    RULE_list_label = 18
    RULE_map_label = 19
    RULE_builtin_type_value = 20
    RULE_primitive_value = 21
    RULE_data_structure_value = 22
    RULE_nil_value = 23
    RULE_bool_value = 24
    RULE_string_value = 25
    RULE_int_value = 26
    RULE_hex_value = 27
    RULE_float_value = 28
    RULE_guid_value = 29
    RULE_pair_value = 30
    RULE_vector_value = 31
    RULE_map_value = 32
    RULE_obj_reference_value = 33
    RULE_special_value = 34
    RULE_rgba_value = 35

    ruleNames =  [ "ndf_file", "assignment", "private_prefix", "export_prefix", 
                   "r_value", "object_type", "block", "normal_assignment", 
                   "member_assignment", "unnamed_assignment", "object", 
                   "id", "arithmetic", "atom", "op", "concatination", "builtin_type_label", 
                   "pair_label", "list_label", "map_label", "builtin_type_value", 
                   "primitive_value", "data_structure_value", "nil_value", 
                   "bool_value", "string_value", "int_value", "hex_value", 
                   "float_value", "guid_value", "pair_value", "vector_value", 
                   "map_value", "obj_reference_value", "special_value", 
                   "rgba_value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    K_TRUE=17
    K_FALSE=18
    K_MAP=19
    K_IS=20
    K_DIV=21
    K_NIL=22
    K_BOOL=23
    K_STRING=24
    K_INT=25
    K_FLOAT=26
    K_PAIR=27
    K_LIST=28
    K_EXPORT=29
    K_PRIVATE=30
    K_UNNAMED=31
    K_RGBA=32
    STRING=33
    INT=34
    FLOAT=35
    HEXNUMBER=36
    GUID=37
    ID=38
    WS=39
    COMMENT=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Ndf_fileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(NdfGrammarParser.EOF, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NdfGrammarParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(NdfGrammarParser.AssignmentContext,i)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_ndf_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNdf_file" ):
                listener.enterNdf_file(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNdf_file" ):
                listener.exitNdf_file(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNdf_file" ):
                return visitor.visitNdf_file(self)
            else:
                return visitor.visitChildren(self)




    def ndf_file(self):

        localctx = NdfGrammarParser.Ndf_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_ndf_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 278636003328) != 0):
                self.state = 72
                self.assignment()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(NdfGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normal_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Normal_assignmentContext,0)


        def member_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Member_assignmentContext,0)


        def unnamed_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Unnamed_assignmentContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = NdfGrammarParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_assignment)
        try:
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.normal_assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.member_assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.unnamed_assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Private_prefixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_PRIVATE(self):
            return self.getToken(NdfGrammarParser.K_PRIVATE, 0)

        def getRuleIndex(self):
            return NdfGrammarParser.RULE_private_prefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrivate_prefix" ):
                listener.enterPrivate_prefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrivate_prefix" ):
                listener.exitPrivate_prefix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrivate_prefix" ):
                return visitor.visitPrivate_prefix(self)
            else:
                return visitor.visitChildren(self)




    def private_prefix(self):

        localctx = NdfGrammarParser.Private_prefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_private_prefix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(NdfGrammarParser.K_PRIVATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Export_prefixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_EXPORT(self):
            return self.getToken(NdfGrammarParser.K_EXPORT, 0)

        def getRuleIndex(self):
            return NdfGrammarParser.RULE_export_prefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExport_prefix" ):
                listener.enterExport_prefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExport_prefix" ):
                listener.exitExport_prefix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExport_prefix" ):
                return visitor.visitExport_prefix(self)
            else:
                return visitor.visitChildren(self)




    def export_prefix(self):

        localctx = NdfGrammarParser.Export_prefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_export_prefix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(NdfGrammarParser.K_EXPORT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def concatination(self):
            return self.getTypedRuleContext(NdfGrammarParser.ConcatinationContext,0)


        def arithmetic(self):
            return self.getTypedRuleContext(NdfGrammarParser.ArithmeticContext,0)


        def builtin_type_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.Builtin_type_valueContext,0)


        def object_(self):
            return self.getTypedRuleContext(NdfGrammarParser.ObjectContext,0)


        def normal_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Normal_assignmentContext,0)


        def obj_reference_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.Obj_reference_valueContext,0)


        def nil_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.Nil_valueContext,0)


        def special_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.Special_valueContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_r_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR_value" ):
                listener.enterR_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR_value" ):
                listener.exitR_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitR_value" ):
                return visitor.visitR_value(self)
            else:
                return visitor.visitChildren(self)




    def r_value(self):

        localctx = NdfGrammarParser.R_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_r_value)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.concatination(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.arithmetic(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.builtin_type_value()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self.object_()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 93
                self.normal_assignment()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 94
                self.obj_reference_value(0)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 95
                self.nil_value()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 96
                self.special_value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Object_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NdfGrammarParser.ID, 0)

        def getRuleIndex(self):
            return NdfGrammarParser.RULE_object_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObject_type" ):
                listener.enterObject_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObject_type" ):
                listener.exitObject_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObject_type" ):
                return visitor.visitObject_type(self)
            else:
                return visitor.visitChildren(self)




    def object_type(self):

        localctx = NdfGrammarParser.Object_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_object_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(NdfGrammarParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normal_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Normal_assignmentContext,0)


        def member_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Member_assignmentContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = NdfGrammarParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.normal_assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.member_assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Normal_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(NdfGrammarParser.IdContext,0)


        def K_IS(self):
            return self.getToken(NdfGrammarParser.K_IS, 0)

        def r_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.R_valueContext,0)


        def export_prefix(self):
            return self.getTypedRuleContext(NdfGrammarParser.Export_prefixContext,0)


        def private_prefix(self):
            return self.getTypedRuleContext(NdfGrammarParser.Private_prefixContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_normal_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNormal_assignment" ):
                listener.enterNormal_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNormal_assignment" ):
                listener.exitNormal_assignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNormal_assignment" ):
                return visitor.visitNormal_assignment(self)
            else:
                return visitor.visitChildren(self)




    def normal_assignment(self):

        localctx = NdfGrammarParser.Normal_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_normal_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.state = 105
                self.export_prefix()
                pass
            elif token in [30]:
                self.state = 106
                self.private_prefix()
                pass
            elif token in [38]:
                pass
            else:
                pass
            self.state = 109
            self.id_()
            self.state = 110
            self.match(NdfGrammarParser.K_IS)
            self.state = 111
            self.r_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Member_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(NdfGrammarParser.IdContext,0)


        def r_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.R_valueContext,0)


        def normal_assignment(self):
            return self.getTypedRuleContext(NdfGrammarParser.Normal_assignmentContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_member_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMember_assignment" ):
                listener.enterMember_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMember_assignment" ):
                listener.exitMember_assignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember_assignment" ):
                return visitor.visitMember_assignment(self)
            else:
                return visitor.visitChildren(self)




    def member_assignment(self):

        localctx = NdfGrammarParser.Member_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_member_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.id_()
            self.state = 114
            self.match(NdfGrammarParser.T__0)
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 115
                self.r_value()
                pass

            elif la_ == 2:
                self.state = 116
                self.normal_assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unnamed_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_UNNAMED(self):
            return self.getToken(NdfGrammarParser.K_UNNAMED, 0)

        def r_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.R_valueContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_unnamed_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnnamed_assignment" ):
                listener.enterUnnamed_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnnamed_assignment" ):
                listener.exitUnnamed_assignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnnamed_assignment" ):
                return visitor.visitUnnamed_assignment(self)
            else:
                return visitor.visitChildren(self)




    def unnamed_assignment(self):

        localctx = NdfGrammarParser.Unnamed_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_unnamed_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(NdfGrammarParser.K_UNNAMED)
            self.state = 120
            self.r_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def object_type(self):
            return self.getTypedRuleContext(NdfGrammarParser.Object_typeContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NdfGrammarParser.BlockContext)
            else:
                return self.getTypedRuleContext(NdfGrammarParser.BlockContext,i)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_object

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObject" ):
                listener.enterObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObject" ):
                listener.exitObject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObject" ):
                return visitor.visitObject(self)
            else:
                return visitor.visitChildren(self)




    def object_(self):

        localctx = NdfGrammarParser.ObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_object)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.object_type()
            self.state = 123
            self.match(NdfGrammarParser.T__1)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 276488519680) != 0):
                self.state = 124
                self.block()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(NdfGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NdfGrammarParser.ID, 0)

        def builtin_type_label(self):
            return self.getTypedRuleContext(NdfGrammarParser.Builtin_type_labelContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)




    def id_(self):

        localctx = NdfGrammarParser.IdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_id)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(NdfGrammarParser.ID)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 133
                self.match(NdfGrammarParser.T__3)
                self.state = 134
                self.builtin_type_label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmetic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NdfGrammarParser.ArithmeticContext)
            else:
                return self.getTypedRuleContext(NdfGrammarParser.ArithmeticContext,i)


        def atom(self):
            return self.getTypedRuleContext(NdfGrammarParser.AtomContext,0)


        def op(self):
            return self.getTypedRuleContext(NdfGrammarParser.OpContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_arithmetic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmetic" ):
                listener.enterArithmetic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmetic" ):
                listener.exitArithmetic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmetic" ):
                return visitor.visitArithmetic(self)
            else:
                return visitor.visitChildren(self)



    def arithmetic(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = NdfGrammarParser.ArithmeticContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_arithmetic, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 138
                self.match(NdfGrammarParser.T__1)
                self.state = 139
                self.arithmetic(0)
                self.state = 140
                self.match(NdfGrammarParser.T__2)
                pass
            elif token in [5]:
                self.state = 142
                self.match(NdfGrammarParser.T__4)
                self.state = 143
                self.arithmetic(2)
                pass
            elif token in [13, 14, 15, 34, 35, 36, 38]:
                self.state = 144
                self.atom()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 153
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = NdfGrammarParser.ArithmeticContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmetic)
                    self.state = 147
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 148
                    self.op()
                    self.state = 149
                    self.arithmetic(4) 
                self.state = 155
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def int_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.Int_valueContext,0)


        def float_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.Float_valueContext,0)


        def hex_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.Hex_valueContext,0)


        def obj_reference_value(self):
            return self.getTypedRuleContext(NdfGrammarParser.Obj_reference_valueContext,0)


        def getRuleIndex(self):
            return NdfGrammarParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)
